# pdi-labs

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  Doxyfile  NOTICE  README.md
apps/lab_m1_1/: README.md  main.cpp
apps/lab_m1_1_channels/: main.cpp
apps/lab_m1_1_grayscale/: main.cpp
apps/lab_m1_1_quantization/: main.cpp
apps/lab_m1_2/: README.md  main.cpp
apps/pdi_info/: main.cpp
cmake/: CompilerWarnings.cmake  version.hpp.in
docs/: architecture.md  index.md
docs/labs/: m1-1.md  m1-2.md
images/synthetic/m1_2/: README.md  illumination_gradient.ppm  illumination_shadow.ppm  illumination_uniform.ppm
include/pdi/core/: image_validator.hpp  project_info.hpp  saturation.hpp
include/pdi/io/: image_display.hpp  image_file_storage.hpp
include/pdi/labs/: m1_1_pipeline.hpp  m1_2_study_case.hpp
include/pdi/value/: channel_separator.hpp  grayscale_converter.hpp  grayscale_quantizer.hpp  image_copy.hpp  image_inspector.hpp
src/core/: image_validator.cpp  project_info.cpp  saturation.cpp
src/io/: image_display.cpp  image_file_storage.cpp
src/labs/: m1_1_pipeline.cpp  m1_2_study_case.cpp
src/value/: channel_separator.cpp  grayscale_converter.cpp  grayscale_quantizer.cpp  image_copy.cpp  image_inspector.cpp
tests/: CMakeLists.txt
tests/include/pdi/testing/: mat_comparison.hpp
tests/integration/: m1_1_pipeline_test.cpp  project_metadata_test.cpp
tests/unit/: channel_separator_test.cpp  grayscale_converter_test.cpp  grayscale_quantizer_test.cpp  image_copy_test.cpp  image_file_storage_test.cpp  image_inspector_test.cpp  image_validator_test.cpp  mat_comparison_test.cpp  project_info_test.cpp  saturation_test.cpp
